<resources>
    <string name="app_name">MorQuik</string>
    <string name="mortgage_calculator">MorQuik Calculator</string>
    <string name="yearAmount">Amount of Years:</string>
    <string name="apr">APR Percent:</string>
    <string name="percentSign">%</string>
    <string name="escrow">Escrow Amount: $</string>
    <string name="loan">Loan Amount: $</string>
    <string name="fifteenYears">15 Years</string>
    <string name="thirtyYears">30 Years</string>
    <string name="fortyYears">40 Years</string>
    <string name="defaultPercent">5.00</string>
    <string name="defaultEscrow">1000.00</string>
    <string name="defaultLoan">100000</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="applied_interest">Interest</string>
    <string name="applied_escrow">Escrow</string>
    <string name="applied_principal">Principal</string>
    <string name="loan_left">Loan Left</string>
    <string name="loan_left_textbox">Loan Left</string>
    <string name="principal_textbox">Principal</string>
    <string name="escrow_textbox">Escrow</string>
    <string name="interest_textbox">Interest</string>
</resources>