<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mortgageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_calculator" />

    <Spinner
        android:id="@+id/editYear"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/aprText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apr" />

        <EditText
            android:id="@+id/editAPR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/escrowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escrow" />

        <EditText
            android:id="@+id/editEscrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="numberDecimal"
            android:autofillHints="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/loanText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan" />

        <EditText
            android:id="@+id/editLoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

    </LinearLayout>

</LinearLayout>